Styleguide updates - github only icon on mobile, fixed colours height

--- a/styleguide/assets/sass/modules/_colours.scss
+++ b/styleguide/assets/sass/modules/_colours.scss
@@ -16,7 +16,7 @@
   &__description {
     padding-top: 8px;
     padding-bottom: 8px;
-    min-height: 65px;
+    min-height: 70px;
   }
 
   &__title {
